tests/NormalTests/paczka1/fuzzy1/82131061.err
Error in line 4: LUM A125 15,4
Error in line 6: A578 S889 33,7
Error in line 10: q2qxDN2Z A578 92,9
Error in line 16: IQUUdvTY S471 23,2
Error in line 20: q2qxDN2 A125 98,0
Error in line 11: q2qxDN2Z S471 13,0
Error in line 17: zehqNRG2 A578 37,4
Error in line 22: q2qxDN2Z A125 361,6
Error in line 34: A578 S471 1,6
Error in line 35: A578 A578 29,8
Error in line 33: zehqNRG2 S889 56,4
Error in line 38: zehqNRG2 A578 5,7
Error in line 32: q2qxDN2Z S889 56,6
